--- a/app/templates/profiles/email/friend_new_user.html
+++ b/app/templates/profiles/email/friend_new_user.html
@@ -2,23 +2,24 @@
 <p><strong>{{ friend.first_name}} {{ friend.last_name  }}<strong>({{  friend.email  }}) would like to 
 connect with you on KindTable. </p>
 
-<p>{{ friend.first_name}} {{ friend.last_name  }}({{  friend.email  }}) would like to 
-connect with you on KindTable.</p>
-
 <p>KindTable is a webapp I made that organizes dietary information such as diet (ex: vegan, paleo, vegetarian),
 allergies/intolerances (ex: gluten, peanut) and ingredients to avoid (ex: red pepper, pork) and helps
 the host pick recipes that will work for everyone invited to a meal.</p>
 
-<p>To become friends with complete {{ friend.first_name}} {{ friend.last_name  }}({{  friend.email  }}), follow
-the link below and complete a quick registration process to provide your dietary information. Don't have
+<strong>Step One:</strong>
+
+Register at Kind Table. Complete a quick registration process to provide your dietary information. Don't have
 any dietary preferences? The process will be even quicker. :) 
-Don't want to use KindTable to organize your own dinner parties? Ignore the confirmation email that follows 
-registration.</p>
+
+<a href="{{  url_for('auth.register')}}">{{  url_for('auth.register')}}</a>
+
+
+<strong>Step Two:</strong>
 
 <p>To become friends with {{ friend.first_name}} {{ friend.last_name  }}({{  friend.email  }}), click 
 on the following link and sign in to your KindTable account:</p>
 
-<p>{{ url_for('profiles.confirm_friendship_with_new_user', token=token, _external=True) }}</p>
+<p><a href="{{ url_for('profiles.confirm_friendship_with_new_user', token=token, _external=True) }}">{{ url_for('profiles.confirm_friendship_with_new_user', token=token, _external=True) }}</a></p>
 
 <p>Sincerely,</p>
 
