--- a/app/templates/auth/change_email.html
+++ b/app/templates/auth/change_email.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "main/base.html" %}
 
 {% block title %}Kind Table - Change Your Email Address{% endblock %}
 
