--- a/app/templates/main/beta_access_request.html
+++ b/app/templates/main/beta_access_request.html
@@ -1,15 +1,15 @@
-{% extends 'base.html' %}
+{% extends 'main/base.html' %}
 
 {% block content %}
 
-<div class="row well-spaced" style="padding-top: 10em">
+<div class="row well-spaced" style="padding-top: 2em">
     <div class="col-md-6 col-md-offset-3">
-        <div class = "row round_hidden_div" style="padding-top: 2em">
+        <div class = "row round_hidden_div" style="padding-top: 3em; padding-left: 3em; padding-right: 3em;">
 
             <h1>Request beta testing access</h1>
 
-            <p>In order to use the recipe search and menu building features of this site you will need to 
-                request beta testing access.
+            <p style="padding-top: 1em;"><b>In order to use the recipe search and menu building features of this site you will need to 
+                request beta testing access.</b>
 
             <p>These requests are reviewed individually and we will respond as soon as possible. In the meantime,
                 you can continue to add your friends, create private profiles, create parties and assemble guest lists.</p>
