--- a/app/templates/main/email/request_beta_access_email.html
+++ b/app/templates/main/email/request_beta_access_email.html
@@ -1,12 +1,12 @@
 <p>Dear Kind Table Admin,</p>
 
-Request for beta access:
+<p>Request for beta access:</p>
 
-User id:  {{  user_id}}
-Profile id:  {{  profile_id  }}
-Full name:  {{  full_name  }}
-Email:  {{  email  }}
-Reason  {{  reason  }}
+<p>User id:  <b>{{  user_id}}</b></p>
+<p>Profile id:  <b>{{  profile_id  }}</b></p>
+<p>Full name:  <b>{{  full_name  }}</b></p>
+<p>Email:  <b>{{  email  }}</b></p>
+<p>Reason:   <b>{{  reason  }}</b></p>
 
 <p>Sincerely,</p>
 
