--- a/app/templates/profiles/saved_recipe_profile.html
+++ b/app/templates/profiles/saved_recipe_profile.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'main/base.html' %}
 {% block content %}
 
 <div class="row well-spaced" style="padding-top: 3em">
