--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -151,12 +151,8 @@
 
              <p class = "text-muted" style="padding-top: 1em">Are there any ingredients you would like to avoid eating?</p>
              <p><button type="button" class="btn btn-primary" href="#" data-toggle="modal" data-target="#addAvoidModal">Add Ingredients to Avoid</button>&ensp;<span style="display: none" class="alert alert-success glyphicon glyphicon-ok" id="avoid-success"></span></p>
-
-            <div class="row">
-                <div class="col">
-                    <input type="submit" class="btn btn-success btn-lg pull" value="Register">
-                </div>
-
+            <input type="submit" class="btn btn-success btn-lg pull" value="Register" />
+  
             </div>
 
         </form>
