Flask-Assets is adding 69 invalid or unexpected tokens at the end of the packed file. removing it to try to figure out where the problem is

--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -8,14 +8,13 @@
     <title>Kind Table</title>
 
   <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
+
+    <script type='text/javascript' src="{{  url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-            <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-
-    <link rel="stylesheet" type="text/css" href="{{  url_for('static', filename='site.css') }}">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{  url_for('static', filename='site.css') }}">    
 
     {{ JSGlue.include() }}
     {{ moment.include_jquery() }}
@@ -158,15 +157,13 @@ display:none;
         </div>
     {% endblock %}  <!-- /content -->
 
+
     {% block scripts %}
         {{ moment.include_moment() }}
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-
-        <script>
-            $(document).ready(function(){
-                jQuery('[data-toggle="tooltip"]').tooltip(); 
-            });
-        </script>
     {% endblock %}
+
+      {% assets "js_all" %}
+        <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+      {% endassets %}
 </body>
 </html>
