Removed gunicorn in trying to figure out why jquery not working in foreman and heroku local but is working on python manaye.py runserver

--- a/app/templates/spoonacular/recipe_search.html
+++ b/app/templates/spoonacular/recipe_search.html
@@ -169,4 +169,10 @@
 
             </div>
 
+            <script>
+            $(document).ready(function(){
+                $('[data-toggle="tooltip"]').tooltip(); 
+            });
+            </script>
+
       {% endblock %}
