--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -50,4 +50,6 @@
     </div>
 </div>
 
+<script src="{{ url_for('static', filename = 'js/login_timezone.js') }}" type="text/javascript"></script>
+
 {% endblock %}
