--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -35,6 +35,7 @@
                 </div>
             </div>
         </div>
+        <script src="{{ url_for('static', filename = 'js/addAvoid-Register.js') }}" type="text/javascript"></script>
     </div>
 </div>
 
@@ -68,6 +69,7 @@
                 </div>
             </div>
         </div>
+        <script src="{{ url_for('static', filename = 'js/updateAvoid-register.js') }}" type="text/javascript"></script>
     </div>
 </div>
 
@@ -96,6 +98,7 @@
                 </div>
             </div>
         </div>
+        <script src="{{ url_for('static', filename = 'js/Intol-register.js') }}" type="text/javascript"></script>
     </div>
 </div>
 
