--- a/app/templates/main/anonymous.html
+++ b/app/templates/main/anonymous.html
@@ -8,10 +8,8 @@
   <title>Kind Table</title>
 
   <!-- Bootstrap -->
-     <script type='text/javascript' src="{{  url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+    <script type='text/javascript' src="{{  url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{  url_for('static', filename='site.css') }}">    
 
@@ -76,16 +74,15 @@
               
             {% endblock %}  <!-- /content -->
 
+
+
+          <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
             {% block scripts %}
               {{ moment.include_moment() }}
+              {{ JSGlue.include() }}
             {% endblock %}
-
-
-  {% assets "js_all" %}
-    <script type="text/javascript" src="{{ ASSET_URL }}"></script>
-  {% endassets %}
-
-
 
           </body>
           </html>
