Removed gunicorn in trying to figure out why jquery not working in foreman and heroku local but is working on python manaye.py runserver

--- a/app/templates/main/anonymous.html
+++ b/app/templates/main/anonymous.html
@@ -84,5 +84,7 @@
               {{ JSGlue.include() }}
             {% endblock %}
 
+          <script src="{{ url_for('static', filename = 'js/base.js') }}" type="text/javascript"></script>
+
           </body>
           </html>
