--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -160,5 +160,7 @@ display:none;
         {{ JSGlue.include() }}
     {% endblock %}
 
+    <script src="{{ url_for('static', filename = 'js/base.js') }}" type="text/javascript"></script>
+
 </body>
 </html>
