--- a/app/templates/profiles/add_friend_profile.html
+++ b/app/templates/profiles/add_friend_profile.html
@@ -7,12 +7,12 @@
 <div class="modal-body">
     <div class = "row round_hidden_div" style="padding-top: 2em">
     <div id="ff-flashedalert"></div>
-      <p class="text-muted">Good choice! Enter your friends email below to get started. After submitting the form, you will be redirected to your new profile for your friend where you can add all of the information you know about your friend's eating habits. Or you could just hand over the keyboard to them so they can fill out the information themselves.</p>
+      <p class="text-muted">Good choice! After submitting the form, you will be redirected to your new profile for your friend where you can add all of the information you know about your friend's eating habits. Or you could just hand over the keyboard to them so they can fill out the information themselves.</p>
 
     {% from "_formhelpers.html" import render_field %}
-        <form action="{{ url_for('profiles.add_friend_profile') }}" class="form form-horizontal" method="post" role="form" id="connectFriend">
+        <form action="{{ url_for('profiles.add_friend_profile') }}" class="form form-horizontal" method="post" role="form" id="changeTitle">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-            {{ render_field(add_friend_form.friend_email, style="width: 75%", rows="1") }}<br>
+            {{ render_field(private_profile_title_form.title, style="width: 75%", rows="1") }}<br>
             <input type="submit" class="btn btn-sm btn-info" value="Submit">&ensp;<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
         </form>
     </div>
