Small bug on dashboard

--- a/app/templates/profiles/dashboard.html
+++ b/app/templates/profiles/dashboard.html
@@ -359,8 +359,8 @@
                                         {{  friend.private_profile_title }}
                                         {% else %}
                                         {{ friend.first_name }} {{friend.last_name  }}
-                                    </a> <span class="text-muted">({{  friend.email  }})</span>
-                                        {% endif %}
+                                    <span class="text-muted">({{  friend.email  }})</span>
+                                        </a> {% endif %}
                                 </li>
                             {% endfor %}
                         </ul>
