bug in confirm friendship with new user

--- a/app/templates/profiles/email/friend_new_user.html
+++ b/app/templates/profiles/email/friend_new_user.html
@@ -11,7 +11,7 @@ the host pick recipes that will work for everyone invited to a meal.</p>
 Register at Kind Table. Complete a quick registration process to provide your dietary information. Don't have
 any dietary preferences? The process will be even quicker. :) 
 
-<a href="{{  url_for('auth.register')  }}">{{  url_for('auth.register')  }}</a>
+<a href="{{  url_for('auth.register')  }}">{{  url_for("auth.register")  }}</a>
 
 
 <strong>Step Two:</strong>
