reset password html loading from wrong base

--- a/app/templates/auth/reset_password_from_email.html
+++ b/app/templates/auth/reset_password_from_email.html
@@ -1,4 +1,4 @@
-{% extends "main/base.html" %}
+{% extends "main/anonymous.html" %}
 
 {% block title %}Kind Table - Change Your Password{% endblock %}
 
